[project]
name = "home-exporter"
version = "0.1.0"
description = "ðŸ  Home InfluxDB Exporter"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "evohomeclient>=0.3.9",
    "influxdb3-python>=0.16.0",
    "lowatt-grdf>=2.5.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "schedule>=1.2.2",
    "sentry-sdk>=2.48.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]

[project.scripts]
home-exporter = "home_exporter:main"
# lint = "ruff check ."
# format = "ruff check . --fix"

[tool.uv]
package = true
