[project]
name = "home-exporter"
version = "0.1.0"
description = "🏠 Home InfluxDB Exporter"
readme = "README.md"
requires-python = ">=3.14.4"
dependencies = [
    "evohomeclient>=0.3.9",
    "influxdb3-python>=0.18.0",
    "lowatt-grdf>=2.5.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "schedule>=1.2.2",
    "sentry-sdk>=2.57.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]

[project.scripts]
home-exporter = "home_exporter:main"
# lint = "ruff check ."
# format = "ruff check . --fix"

[tool.uv]
package = true
